--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </head>
 <body>
     <header>
-        <h1>สมชาย เขียนโค้ด</h1>
+        <h1>อานนท์ หงษ์กลิ่น</h1>
         <p>Full Stack Developer | React Specialist | Node.js Engineer</p>
     </header>
 
